[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cop_final_project"
version = "0.0.1"
authors = [
  { name="Gino Giannoutsos", email="ggiannoutsos3763@floridapoly.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LuckyLugiaCW/finalProject"
Issues = "https://github.com/LuckyLugiaCW/finalProject/issues"